<resources>
    <string name="app_name">OTGDiskBackup</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_backup">Backup my files</string>

    <string name="noPermission">You must grant the Storage permission.</string>


    <string name="settingsCategory">Backup Settings</string>

    <string name="from">From</string>
    <string name="from_summary">The folder on the SD card to copy from</string>
    <string name="from_file" translatable="false">/DCIM</string>
    <string name="to">To</string>
    <string name="to_summary">The folder on the Device to copy to</string>
    <string name="to_file" translatable="false">Specify the destination folder</string>
    <string name="extensions">Filter extensions</string>
    <string name="extensions_list" translatable="false">jpg,raw</string>
    <string name="extensions_summary">A comma separated list of extensions to backup</string>
    <string name="overwrite">Overwrite files</string>
    <string name="overwrite_summary">Whether to overwrite existing files</string>
    <string name="delete">Delete files</string>
    <string name="delete_summary">Whether to delete files upon backup</string>
    <string name="debug">Debug</string>
    <string name="debug_summary">Whether to a mock device (for debugging only)</string>
    <string name="writePermissionRequired">You must grant the Storage permission.</string>

    <string name="pluginDisk">Please plugin the disk with the OTG Cable</string>
    <string name="mountingFailed">Failed to mount OTG device.</string>
    <string name="diskReady">Disk ready</string>
    <string name="backingUp">Backing up files&#8230;</string>
    <string name="backingUpFailed">Some files failed to backup</string>

    <string name="missingFromTo">Missing from/to preferences&#8230;</string>
    <string name="invalidFromTo">Invalid from/to preferences&#8230;</string>
    <string name="noFileToBackup">No files to backup&#8230;</string>
    <string name="listViewLabel">Files found on the SD card:</string>

    <string name="aboutText">OTGDiskBackup is simple backup tool, to transfer easily files from a specific directory on a OTG
card to a specific directory on your Android device.
It can be of help when you want to transfer the pictures taken with your digital camera to your Android device.</string>


</resources>
